Fixed Word Wrapping Issue

--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,15 @@ p {
   margin: 0;
   padding: 0;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+}
 
 
 @media only screen and (min-width: 300px) {
